--- a/style.css
+++ b/style.css
@@ -1,13 +1,92 @@
-body {font-family: Arial;}
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+body {
+  font-family: Arial;
 }
 
-/* Style the buttons inside the tab */
+.bg-animation {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  > div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    will-change: opacity;
+  }
+
+  .bg-1 {
+    background: linear-gradient(180deg, #f9dea1 60%, #9bdaff 100%);
+  }
+
+  .bg-2 {
+    background: linear-gradient(300deg, #f9c3f5 60%, #9bdaff 100%);
+    animation: bg-fade-1 6s linear infinite;
+  }
+
+  .bg-3 {
+    background: linear-gradient(10deg, #bab2fc 60%, #9bdaff 100%);
+    animation: bg-fade-2 6s linear infinite;
+  }
+}
+
+@keyframes bg-fade-1 {
+  0% {
+    opacity: 1;
+  }
+
+  33% {
+    opacity: 1;
+  }
+
+  66% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes bg-fade-2 {
+  0% {
+    opacity: 1;
+  }
+
+  33% {
+    opacity: 0;
+  }
+
+  66% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
+.container {
+  width: 40rem;
+}
+
+.tab {
+  overflow: hidden;
+  border: 1px solid #121111;
+  background-color: #f1f1f1;
+  display: flex;
+  justify-content: center;
+}
+
+
 .tab button {
   background-color: inherit;
   float: left;
@@ -19,20 +98,22 @@ body {font-family: Arial;}
   font-size: 17px;
 }
 
-/* Change background color of buttons on hover */
+
 .tab button:hover {
-  background-color: #ddd;
+  background-color: #898683;
 }
 
-/* Create an active/current tablink class */
+
 .tab button.active {
-  background-color: #ccc;
+  background-color: #f6a44c;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 }
 
-/* Style the tab content */
+
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  border: 1px solid #121111;
   border-top: none;
 }
